[project]
name = "instance_tracker"
version = "1.0.1"
description = "A decorator written in Python for tracking instances of callable objects"
authors = [
    {name = "BruDriguezz", email = "swiftnathyz@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
