[tool.poetry]
name = "trackerpy"
version = "1.1.0"
description = "\"A simple, elegant decorator for tracking, controlling, and logging instances of classes\""
authors = ["nathyz <swiftnathyz@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
